constraint-templates/cri-mount.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenycriosocketmount
spec:
  crd:
    spec:
      names:
        kind: K8sDenyCriOSocketMount
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenycriosocketmount

        violation[{"msg": msg}] {
          input.review.object.spec.volumes[_].hostPath.path == "/var/run/crio/crio.sock"
          msg := "Mounting CRI-O Unix socket is not allowed."
        }

        # Check for Pod template in Deployment
        violation[{"msg": msg}] {
          input.review.object.spec.template.spec.volumes[_].hostPath.path == "/var/run/crio/crio.sock"
          msg := "Mounting CRI-O Unix socket is not allowed."
        }
