constraint-templates/env-secret.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenysecretasenvironmentvariable
spec:
  crd:
    spec:
      names:
        kind: K8sDenySecretAsEnvironmentVariable
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenysecretasenvironmentvariable

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].env[_].valueFrom.secretKeyRef
          msg := "Secret mounted as environment variable is not allowed"
        }

        # Check for InitContainers as well
        violation[{"msg": msg}] {
          input.review.object.spec.initContainers[_].env[_].valueFrom.secretKeyRef
          msg := "Secret mounted as environment variable is not allowed"
        }

        # Check for Pod template in Deployment
        violation[{"msg": msg}] {
          input.review.object.spec.template.spec.containers[_].env[_].valueFrom.secretKeyRef
          msg := "Secret mounted as environment variable is not allowed"
        }

        # Check for InitContainers in Pod template in Deployment
        violation[{"msg": msg}] {
          input.review.object.spec.template.spec.initContainers[_].env[_].valueFrom.secretKeyRef
          msg := "Secret mounted as environment variable is not allowed"
        }
