constraint-templates/image-pull-policy.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8simagepullpolicynotalways
spec:
  crd:
    spec:
      names:
        kind: K8sImagePullPolicyNotAlways
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8simagepullpolicynotalways

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.imagePullPolicy == "Always"
          msg := sprintf("Container %q has imagePullPolicy set to Always, which is not allowed.", [container.name])
        }

        # Check for Pod template in Deployment
        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          container.imagePullPolicy == "Always"
          msg := sprintf("Container %q in Pod template has imagePullPolicy set to Always, which is not allowed.", [container.name])
        }
