constraint-templates/pod-exec.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyexecattach
spec:
  crd:
    spec:
      names:
        kind: K8sDenyExecAttach
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyexecattach

        violation[{"msg": msg}] {
          input.request.kind.kind == "Exec"
          msg := "Exec operations are not allowed."
        }

        violation[{"msg": msg}] {
          input.request.kind.kind == "Attach"
          msg := "Attach operations are not allowed."
        }
