constraint-templates/probe-timestamp.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8slivenessgreaterthanreadiness
spec:
  crd:
    spec:
      names:
        kind: K8sLivenessGreaterThanReadiness
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8slivenessgreaterthanreadiness

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          liveness := container.livenessProbe
          readiness := container.readinessProbe
          liveness.initialDelaySeconds <= readiness.initialDelaySeconds
          msg := sprintf("Container %q livenessProbe initialDelaySeconds should be greater than readinessProbe initialDelaySeconds.", [container.name])
        }

        # Check for Pod template in Deployment, StatefulSet, DaemonSet, etc.
        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          liveness := container.livenessProbe
          readiness := container.readinessProbe
          liveness.initialDelaySeconds <= readiness.initialDelaySeconds
          msg := sprintf("Container %q in Pod template livenessProbe initialDelaySeconds should be greater than readinessProbe initialDelaySeconds.", [container.name])
        }
