constraint-templates/reserved-ns.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: reservednamespace
spec:
  crd:
    spec:
      names:
        kind: ReservedNamespace
      validation:
        legacySchema: true
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package reservednamespace

        violation[{"msg": msg}] {
          reserved_namespaces := {"default"}
          ns := input.review.object.metadata.namespace

          reserved_namespaces[ns]
          msg := sprintf("Resource creation is not allowed in reserved namespaces: %v", [ns])
        }

        violation[{"msg": msg}] {
          prefix := "openshift-"
          namespace := input.review.object.metadata.namespace

          starts_with(namespace, prefix)
          msg := sprintf("Resource creation is not allowed in namespaces starting with 'openshift-': %v", [namespace])
        }

        starts_with(namespace, prefix) {
          startswith(namespace, prefix)
        }
