constraint-templates/runasroot.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyrootcontainers
spec:
  crd:
    spec:
      names:
        kind: K8sDenyRootContainers
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyrootcontainers

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsUser == 0
          msg := "Containers running as root (runAsUser=0) are not allowed."
        }

        violation[{"msg": msg}] {
          input.review.object.spec.initContainers[_].securityContext.runAsUser == 0
          msg := "InitContainers running as root (runAsUser=0) are not allowed."
        }

        # Check for Pod template in Deployment
        violation[{"msg": msg}] {
          input.review.object.spec.template.spec.containers[_].securityContext.runAsUser == 0
          msg := "Containers running as root (runAsUser=0) are not allowed."
        }

        # Check for InitContainers in Pod template in Deployment
        violation[{"msg": msg}] {
          input.review.object.spec.template.spec.initContainers[_].securityContext.runAsUser == 0
          msg := "InitContainers running as root (runAsUser=0) are not allowed."
        }
